fix: fix the wrong height when updating

--- a/RichEditorView/Assets/editor/style.css
+++ b/RichEditorView/Assets/editor/style.css
@@ -38,7 +38,7 @@ body {
 #container {
     display: table;
     width: 100%;
-    height: 100%;
+    height: min-content;
 }
 
 #editor {
